# polydros-simulator

./: .gitignore  .pre-commit-config.yaml  ACTIONABLE_FIXES.md  CARD_DETAIL_FEATURE_SUMMARY.md  CARD_DETAIL_FINAL_SUMMARY.md  CARD_DETAIL_GETTING_STARTED.md  CARD_DETAIL_IMPLEMENTATION_CHECKLIST.md  CARD_DETAIL_QUICK_REFERENCE.md  CARD_DETAIL_VISUAL_DESIGN.md  CARD_PRICE_EVOLUTION_TEST_BREAKDOWN.md  CODE_REVIEW.md  COMBAT_ECONOMY_E2E_TESTS_BREAKDOWN.md  DATABASE_ANALYSIS.md  DELIVERY_SUMMARY.md  E2E_TEST_REFERENCE.md  EXCEL_EXPORT.md  EXPANDED_E2E_TESTS_SUMMARY.md  FEATURES.md  FRONTEND_WIRING_COMPLETE.md  INDEX_DELIVERABLES.md  MARKET_DESIGN.md  PRICE_HISTORY_COMPLETE.md  PRICE_HISTORY_GUIDE.md  PRICE_HISTORY_IMPLEMENTATION.md  PRICE_HISTORY_UI_GUIDE.md  QUICK_START_PRICE_HISTORY.md  README.md  REFACTORING_ANALYSIS.md  SDET_QA_REVIEW.md  SESSION_SUMMARY.md  SESSION_SUMMARY_PRICE_HISTORY.md  TESTING.md  UI_UPDATE_SUMMARY.md  UI_UX_IMPROVEMENTS_SUMMARY.md  VISUAL_GUIDE_NEW_INVENTORY.md  codecov.yml  context.md  debug_card_instance.py  debug_lastrun.py  final_verification.py  (+25 more)
.github/workflows/: ci.yml
.scripts/: list_tests.py
backend/: __init__.py  main.py
frontend/: .coverage  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/test-results/: .last-run.json
frontend/tests/: e2e-card-images.spec.ts  e2e-combat.spec.ts  (+3 more)
scripts/: README.md  export_cards_from_excel.py
simulation/: __init__.py  agents.py  booster.py  cards.py  engine.py  types.py  world.py
(+32 files in other folders)
